# nicegui-todo

./: .env_EXAMPLE  .gitignore  .pre-commit-config.yaml  .sonarcloud.properties  AGENTS.md  README.md  TODO.md  cspell-words.txt  cspell.config.yaml  pyproject.toml
scripts/: create_board.sh  delete_board.sh  deploy.sh  gen_apple_icon.py  list_boards.sh  run_nice.sh  update.sh
src/: __init__.py  auth.py  database.py  main.py  models.py
src/services/: __init__.py  board_service.py  export_service.py
src/ui/: __init__.py  _shared.py  board_page.py  components.py  dialogs.py
