[project]
name = "todo-board"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "nicegui>=3.9.0",
    "python-dotenv>=1.2.2",
    "sqlmodel>=0.0.38",
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.9",
]

[tool.vulture]
paths = ["src"]
exclude = ["src/models.py"]
ignore_names = [
    "_auth_middleware",
    "_login_submit",
    "_logout",
    "board_page",
    "date_created",
    "last_login",
    "login_page",
]
